[gd_scene load_steps=2 format=3 uid="uid://csrxm8kcu1vaf"]

[ext_resource type="Script" path="res://Interaction/InteractionArea/interaction_area.gd" id="1_jll4a"]

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
script = ExtResource("1_jll4a")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
